<resources>
    <string name="app_name">Aplikacja Dietetyczna</string>
    <string name="title_activity_catering">Map</string>
    <string name="show_map">Pokaż na mapie</string>
    <string name="give_height">Podaj wzrost [cm]</string>
    <string name="give_weight">Podaj wagę [kg]</string>
    <string name="weight">Waga</string>
    <string name="height">Wzrost</string>
    <string name="yourBMI">Twoje BMI</string>
    <string name="calc_bmi">Oblicz BMI</string>
    <string name="give_age">Podaj wiek w latach</string>
    <string name="age">wiek</string>
    <string name="select_sex">płeć</string>
    <string name="select_activity">tryb życia</string>
    <string name="calc_cpm">Oblicz CPM</string>
    <string name="day_cal">Dzienne spożycie kalorii wynosi</string>
    <string name="diet_details">Plan diety</string>
    <string name="shop_list">Lista zakupów</string>
    <string name="caterings">Catering</string>
    <string name="warning_data">Podaj wszystkie dane!</string>
    <string name="value_str">Wartość musi byc większa od 0!</string>
    <string name="low_weight">niedowaga</string>
    <string name="normal_weight">waga prawidłowa</string>
    <string name="obeseI">nadwaga</string>
    <string name="obeseII">otyłość</string>
    <string name="obeseIII">otyłość dużego stopnia</string>
    <string name="woman">Kobieta</string>
    <string name="man">Mężczyzna</string>
    <string name="activity_1">Nieaktywny (brak ćwiczeń)</string>
    <string name="activity_2">Mało aktywny (lekkie ćwiczenia)</string>
    <string name="activity_3">Średnio aktywny (wysiłek 3–5 razy tygodniowo)</string>
    <string name="activity_4">Aktywny (wysiłek 6–7 razy w tygodniu)</string>
    <string name="activity_5">Bardzo aktywny (ćwiczenia i praca fizyczna)</string>
    <string name="select_target">cel diety</string>
    <string name="reduction">Redukcja</string>
    <string name="cons_weight">Utrzymanie wagi</string>
    <string name="mass">Masa</string>
    <string name="save_data">Zapisz dane</string>
    <string name="select_number">Wybierz liczbę posiłków</string>
    <string name="prefer">Preferencje żywieniowe</string>
    <string name="none">Brak</string>
    <string name="veget">Wegetariańska</string>
    <string name="warning_database">Aktualizacja bazy danych nie powiodła się</string>
    <string name="success">Dane zostały poprawnie zapisane</string>
    <string name="warning_dietplan">Problem z odczytem danych</string>
    <string name="food_list">Lista zakupów</string>
    <string name="add_food_item">Dodaj do listy</string>
    <string name="add_new_title">Dodaj kolejne produkty </string>
    <string name="give_name">Wpisz nazwę</string>
    <string name="name">nazwa</string>
    <string name="add">Dodaj</string>
    <string name="cancel">Anuluj</string>
    <string name="add_new">Co jeszcze musisz kupić?</string>
    <string name="list_success">Poprawnie zapisano!</string>
    <string name="mon">Poniedziałek</string>
    <string name="tue">Wtorek</string>
    <string name="wed">Środa</string>
    <string name="thu">Czwartek</string>
    <string name="fri">Piątek</string>
    <string name="sat">Sobota</string>
    <string name="sun">Niedziela</string>
    <string name="open">Otwarte</string>
    <string name="close">Zamknięte</string>
    <string name="delete">Usuń</string>
    <string name="breakfast">śniadanie</string>
    <string name="second_breakfast">drugie śniadanie</string>
    <string name="dinner">obiad</string>
    <string name="dessert">podwieczorek</string>
    <string name="supper">kolacja</string>
    <string name="foodmenu">twój jadłospis</string>
    <string name="base_alert">Baza jest pusta - uzupełnij swoje dane!</string>
    <string name="param">Oblicz parametry</string>
    <string name="data">Twoje dane</string>
    <string name="diet">Twój jadłospis</string>
    <string name="list">Lista zakupów</string>
    <string name="add_food">Dodaj posiłek</string>
    <string name="maps">Mapa</string>
    <string name="stat">Dziennik postępów</string>
    <string name="drawer_open">Otwórz</string>
    <string name="drawer_close">Zamknij</string>
    <string name="parameters_title">Oblicz swoje parametry</string>
    <string name="date_picker">Wybierz datę</string>
    <string name="maps_alert">Wykorzystano limit użycia darmowego API - spróbuj ponownie jutro! Aby załadować znaczniki na mapie możesz także odczekać kilkanaście sekund.</string>
    <string name="list_info">Naciśnij przycisk na dole, aby dodać produkty do listy</string>
    <string name="see_recipe">Zobacz przepis</string>
    <string name="change_recipe">Zmień jadłospis</string>
    <string name="write_name">Wpisz nazwę posiłku</string>
    <string name="ingredients_add">Składniki</string>
    <string name="write_ingredients">Wpisz składniki (oddzielając je przecinkiem)</string>
    <string name="write_recipe">Podaj przepis</string>
    <string name="recipe_add">przepis</string>
    <string name="select_type">typ posiłku</string>
    <string name="select_preferences">rodzaj posiłku</string>
    <string name="calories">Kalorie: </string>
    <string name="proteins">Białko: </string>
    <string name="fat">Tłuszcz: </string>
    <string name="carbohydrates">Węglowodany:</string>
    <string name="portions">Ilość porcji: </string>
    <string name="edit_data">Edytuj dane</string>
    <string name="elimination">Zaznacz składniki, które chcesz wykluczyć z jadłospisu (opcjonalne)</string>
    <string name="milk">mleko</string>
    <string name="eggs">jajka</string>
    <string name="nuts">orzechy</string>
    <string name="tomatoes">pomidory</string>
    <string name="potatoes">ziemniaki</string>
    <string name="chocolate">czekolada</string>
    <string name="wheat">pszenica</string>
    <string name="soy">soja</string>
    <string name="ingredients">Składniki: </string>
    <string name="recipe">Przepis: </string>
    <string name="day">Dzień</string>
    <string name="empty_database">Uzupełnij swoje dane, aby można ułożyć dietę</string>
    <string name="info">Informacja</string>
    <string name="open_activity">Otwórz aktywność</string>
    <string name="none_type">Brak szczególnego typu</string>
    <string name="write_url">Wpisz źródło</string>
    <string name="add_success">Poprawnie dodano posiłek</string>
    <string name="add_fail">Wystąpił problem z dodaniem posiłku</string>
    <string name="change_week_plan_alert">W wyniku ułożenia nowego jadłospisu utracisz obecny tygodniowy jadłospis. Kontynuować?</string>
    <string name="change_daily_alert">W wyniku ułożenia nowego jadłospisu utracisz obecny dzienny jadłospis. Kontynuować?</string>
    <string name="yes">Tak</string>
    <string name="settings">Ustawienia</string>
    <string name="change">Zmień</string>
    <string name="change_info">Aby zmienić tygodniowy jadłospis naciśnij przycisk poniżej.</string>
    <string name="change_title">Zmień swój jadłospis</string>
    <string name="change_daily">Aby zmienić dzienny jadłospis wybierz dzień z listy, nastepnie naciśnij przycisk poniżej</string>
    <string name="fat_level">Poziom tkanki tłuszczowej </string>
    <string name="calories_add">Kalorie </string>
    <string name="proteins_add">Białko </string>
    <string name="fat_add">Tłuszcz </string>
    <string name="carbohydrates_add">Węglowodany</string>
    <string name="portions_write">Podaj ilość porcji z przepisu </string>
    <string name="calories_write">Podaj ilość kalorii [kcal] </string>
    <string name="proteins_write">Podaj ilość białka [g] </string>
    <string name="fat_write">Podaj ilość tłuszczu [g] </string>
    <string name="carbohydrates_write">Podaj ilość węglowodanów [g]</string>
    <string name="portions_add">Ilość porcji </string>
    <string name="add_point">Dodaj punkt </string>
    <string name="parameters_label">Twoje parametry</string>
    <string name="add_point_success">Dodano punkt do wykresu</string>
    <string name="fat_popup">WHR (Waist to Hip Ratio) - wskaźnik umożliwiający określenie typu otyłości i rozmieszczenia tkanki tłuszczowej, oznaczający stosunek obwodu talii do obwodu bioder. Wartość WHR powyżej 0,88 u kobiet i 1 u mężczyzn oznacza androidalny lub brzuszny typ otyłości. Poniżej określa gynoidalny typ.
    Procentowa zawartość tkanki tłuszczowej obliczona jest na podstawie pomiarow fałdów skórnych tłuszczowych w różnych okolicach ciała. Najlepszy do tego celu jest fałdomierz, można wykorzystać też linijkę.</string>
    <string name="waist_measure">Obwód talii</string>
    <string name="waist_add">Podaj obwód talii [cm]</string>
    <string name="hips_measure">Obwód bioder</string>
    <string name="hips_add">Podaj obwód bioder [cm]</string>
    <string name="chest_add">Pomiar fałdu na klatce [mm]</string>
    <string name="navel_add">Pomiar fałdu przy pępku [mm]</string>
    <string name="thigh_add">Pomiar fałdu na udzie [mm]</string>
    <string name="triceps_add">Pomiar fałdu na tricepsie [mm]</string>
    <string name="hip_add">Pomiar fałdu na biodrze [mm]</string>
    <string name="fat_measure">Inne pomiary</string>
    <string name="fat_calc">Procentowa zawartość tkanki tłuszczowej</string>
    <string name="WHR">WHR</string>
    <string name="androidal">Typ androidalny</string>
    <string name="gynoidal">Typ gynoidalny</string>
    <string name="calc">Oblicz</string>
    <string name="bmi_popup">Body Mass Index (BMI)- wskażnik masy ciała. obliczany jako stosunek masy ciała do kwadratu wysokości. Jest wskazany przez WHO do oceny stanu odżywienia energetyczno-białkowego.</string>
    <string name="cpm_popup">Całkowita przemiana materii (CPM)- całodniowe wydatki energetyczne człowieka, związane  z jego normalnym funkcjonowaniem i pracą zawodową. Uwzględnia podstawową przemianę materii, czyli ilośc energii niezbędnej do zachowania podstawowych funkcji życiowych oraz współczynnik aktywności fizycznej.</string>
    <string name="warning_data_fat">Upewnij się, że podałaś/podałeś wszystkie dane potrzebne do obliczenia parametrów!</string>
    <string name="image">Brak dostępu do Internetu - sprawdź  połączenie</string>
    <string name="url_text">Żródło:</string>
    <string name="url">Żródło</string>
    <string name="diet_warning">Aplikacja została stworzona z myślą o osobach, które chcą zdrowo się odżywiać i kontrolować swoją wagę.
        Z tego powodu zostały nałożone pewne ograniczenia, gdyż pierwszą zasadą jest to, aby NIE SZKODZIĆ użytkownikom:
waga musi mieścić się w zakresie 40-120kg,wzrost musi być liczbą dodatnią, mniejszą od 210cm, minimalny wiek użytkownika to 12 lat.

Jeżeli nie spełniasz któregoś z kryteriów, bardzo proszę o skonsultowanie się z certyfikowanym dietetykiem.

    </string>
    <string name="close_window">Zamknij</string>
    <string name="app_requirements">Ograniczenia aplikacji</string>
    <string name="reduction_alert">Twoje BMI wskazuje poniżej 17. Sugerowany cel diety to przybranie na wadze (masa).</string>
    <string name="restaurant">Restauracja</string>
    <string name="supermarket">Supermarket</string>
    <string name="data_alert">Daty muszą występować w kolejności chronologicznej! Sprawdź ostatnią datę i wybierz późniejszą.</string>
    <string name="map_alert">Sprawdż, czy masz włączony dostęp do danych lokalizacyjnych w urządzeniu!</string>
    <string name="diet_alert">Przy tych danych ułożenie diety może być niemożliwe ze względu na zbyt małą ilość odpowiadających przepisów. Jeżeli przy korzystaniu z aktywności "Twój jadłospis" aplikacja przestanie odpowiadać, oznacza to, że ułożenie jadłospisu nie było możliwe. Zmień swoje dane lub dodaj własne przepisy. </string>
</resources>
