<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/meal_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/meal_portion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/portions"/>

    <TextView
        android:id="@+id/calories_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calories"/>

    <TextView
        android:id="@+id/proteins_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/proteins"/>
    <TextView
        android:id="@+id/carbohydrates_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/carbohydrates"/>
    <TextView
        android:id="@+id/fat_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fat"/>
    <TextView
        android:id="@+id/ingredients_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingredients"/>
    <TextView
        android:id="@+id/recipe_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recipe"/>
</LinearLayout>