<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    tools:context=".AddMealActivity">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F0F4C3"
        android:orientation="vertical">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/write_name"
    android:textSize="15sp"
    android:textColor="@color/darkgrey"
    />
    <EditText
        android:id="@+id/name_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/write_ingredients"
        android:textSize="15sp"
        android:textColor="@color/darkgrey"
        />
    <EditText
        android:id="@+id/ingredients_edit"
        android:minLines="3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/write_recipe"
    android:textSize="15sp"
    android:textColor="@color/darkgrey"
    />
    <EditText
        android:minLines="3"
        android:id="@+id/recipe_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/select_type"
    android:textSize="15sp"
    android:textColor="@color/darkgrey"
    />
    <Spinner
        android:id="@+id/type_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/darkgrey"
         />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_preferences"
        android:textSize="15sp"
        android:textColor="@color/darkgrey"
        />
        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton android:id="@+id/radio_none"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/none_type"
                android:checked="true"
                />
            <RadioButton android:id="@+id/radio_vege"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/veget"
                />
        </RadioGroup>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/write_url"
            android:textSize="15sp"
            android:textColor="@color/darkgrey"
            />
        <EditText
            android:id="@+id/url_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/write_values"
        android:textSize="15sp"
        android:textColor="@color/darkgrey"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calories"
        android:textSize="15sp"
        android:textColor="@color/darkgrey"
        />
        <EditText
            android:id="@+id/calories_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/proteins"
        android:textSize="15sp"
        android:textColor="@color/darkgrey"
        />
        <EditText
            android:id="@+id/proteins_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/carbohydrates"
        android:textSize="15sp"
        android:textColor="@color/darkgrey"
        />
        <EditText
            android:id="@+id/carbohydrates_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fat"
        android:textSize="15sp"
        android:textColor="@color/darkgrey"
        />
        <EditText
            android:id="@+id/fat_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/portions"
        android:textSize="15sp"
        android:textColor="@color/darkgrey"
        />
        <EditText
            android:id="@+id/portions_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
        <Button
            android:id="@+id/add_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:backgroundTint="#008000"
            android:ems="8"
            android:text="@string/add_food"
            android:textSize="25sp"
            android:textStyle="bold" />
</LinearLayout>
</ScrollView>