<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    tools:context=".FatLevelFragment">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F0F4C3"
        android:padding="15dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/info_draw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_info_black_24dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:text="@string/select_sex"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:gravity="center"/>

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radioGroup"
            android:orientation="horizontal"
            >
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/woman"
                android:text="@string/woman"
                android:drawableStart="@drawable/icons8_female_48"
                android:checked="true"
                android:layout_gravity="center"
                android:layout_marginEnd="20dp"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/man"
                android:text="@string/man"
                android:drawableStart="@drawable/icons8_male_48"
                android:layout_gravity="center"/>

        </RadioGroup>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:text="@string/age"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:gravity="center"/>


        <EditText
            android:id="@+id/age_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@android:drawable/editbox_background"
            android:drawableStart="@drawable/icons8_user"
            android:ems="10"
            android:hint="@string/give_age"
            android:inputType="number|numberDecimal"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/waist_measure"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/waist_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@android:drawable/editbox_background"
            android:drawableStart="@drawable/icons8_length_24"
            android:ems="10"
            android:hint="@string/waist_add"
            android:inputType="number|numberDecimal"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textSize="20sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:text="@string/hips_measure"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAllCaps="true"/>

        <EditText
            android:id="@+id/hip_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@android:drawable/editbox_background"
            android:drawableStart="@drawable/icons8_length_24"
            android:ems="10"
            android:hint="@string/hips_add"
            android:inputType="number|numberDecimal"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textSize="20sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:text="@string/fat_measure"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAllCaps="true"/>

        <EditText
            android:id="@+id/measure1_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@android:drawable/editbox_background"
            android:drawableStart="@drawable/icons8_length_24"
            android:ems="10"
            android:hint="@string/triceps_add"
            android:inputType="number|numberDecimal"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textSize="20sp" />


        <EditText
            android:id="@+id/measure2_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@android:drawable/editbox_background"
            android:drawableStart="@drawable/icons8_length_24"
            android:ems="10"
            android:hint="@string/hip_add"
            android:inputType="number|numberDecimal"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/measure3_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@android:drawable/editbox_background"
            android:drawableStart="@drawable/icons8_length_24"
            android:ems="10"
            android:hint="@string/thigh_add"
            android:inputType="number|numberDecimal"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textSize="20sp" />





        <Button
            android:id="@+id/fat_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:ems="8"
            android:text="@string/calc"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_gravity="center"/>


        <TextView
        android:id="@+id/your_whr_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:text="@string/WHR"
        android:layout_gravity="center_horizontal"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        android:visibility="invisible" />


        <TextView
            android:id="@+id/whr_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20sp"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/type_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20sp"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/your_bf_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:text="@string/fat_calc"
            android:layout_gravity="center_horizontal"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            android:visibility="invisible" />


        <TextView
            android:id="@+id/bf_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:layout_marginTop="20sp"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>