<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:text="@string/change_title"
        android:textColor="@android:color/black"
        android:textSize="26sp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/change_info"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold" />
    <Button
        android:id="@+id/btn_change_week"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:backgroundTint="#008000"
        android:ems="8"
        android:text="@string/change"
        android:textSize="25sp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/change_daily"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold" />
    <Spinner
        android:id="@+id/day_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80sp"
        android:layout_marginRight="80sp"
        android:backgroundTint="@android:color/black"
        android:textAlignment="center" />
    <Button
        android:id="@+id/btn_change_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:backgroundTint="#008000"
        android:ems="8"
        android:text="@string/change"
        android:textSize="25sp"
        android:textStyle="bold" />
</LinearLayout>
</ScrollView>